textproc/py-pyRdfa3: Move to textproc/py-pyrdfa3; Update to 3.6.5
Reported by:	portscout

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1533,7 +1533,6 @@
     SUBDIR += py-pscript
     SUBDIR += py-pss
     SUBDIR += py-pyPEG2
-    SUBDIR += py-pyRdfa3
     SUBDIR += py-pyahocorasick
     SUBDIR += py-pyaml
     SUBDIR += py-pybtex
@@ -1561,6 +1560,7 @@
     SUBDIR += py-pypa-docs-theme
     SUBDIR += py-pypandoc
     SUBDIR += py-pyphen
+    SUBDIR += py-pyrdfa3
     SUBDIR += py-pyrss2gen
     SUBDIR += py-pyscss
     SUBDIR += py-pysrt
