devel/tcl-thread: unifiy tcl8-thread and tcl9-thread
Version 3.0.4 of the Thread extension supports both Tcl8 and Tcl9. Get rid of the version-specific ports.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -8437,8 +8437,7 @@
     SUBDIR += tcl-mmap
     SUBDIR += tcl-signal
     SUBDIR += tcl-trf
-    SUBDIR += tcl8-thread
-    SUBDIR += tcl9-thread
+    SUBDIR += tcl-thread
     SUBDIR += tclap
     SUBDIR += tclap12
     SUBDIR += tclbsd
