--- a/graphics/ogre3d/Makefile
+++ b/graphics/ogre3d/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	ogre3d
 DISTVERSIONPREFIX=	v
 DISTVERSION=	14.5.1
+PORTREVISION=	1
 CATEGORIES=	graphics devel
 
 MAINTAINER=	fluffy@FreeBSD.org
