--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1836,6 +1836,7 @@
     SUBDIR += rubygem-commonmarker
     SUBDIR += rubygem-commonmarker0
     SUBDIR += rubygem-creole
+    SUBDIR += rubygem-cronex
     SUBDIR += rubygem-css_parser
     SUBDIR += rubygem-cssmin
     SUBDIR += rubygem-cucumber-gherkin
