editors/openoffice-devel: fix previous commit
Fix the previous commit for the python 3.12 build fix.  The incorrect
version of the configure change was inadvertently committed.

PR:		292190
Fixes:		96fb41419355 - main - editors/openoffice-devel: Fix with python >= 3.12

--- a/editors/openoffice-devel/files/patch-configure.ac
+++ b/editors/openoffice-devel/files/patch-configure.ac
@@ -14,7 +14,7 @@
     AC_MSG_RESULT([external])
     AM_PATH_PYTHON([2.7])
  
-+   if ! $_python -c "import distutils.sysconfig;"; then
++   if ! $PYTHON -c "import distutils.sysconfig;"; then
 +       AC_MSG_ERROR([python setuptools module is required to provide distutils for python >= 3.12])
 +   fi
     python_include=`$PYTHON -c "import distutils.sysconfig; print(distutils.sysconfig.get_config_var('INCLUDEPY'));"`
