lang/go-devel: Recommend lang/go instead
This port is functionally closer to lang/go than lang/goXYZ in that it
installs unversioned binaries. A user who switches to a versioned Go
package may wind up wondering why `go` has disappeared.

--- a/lang/go-devel/Makefile
+++ b/lang/go-devel/Makefile
@@ -35,7 +35,7 @@ CPE_VENDOR=	golang
 NO_SHLIB_REQUIRES_GLOB=	*
 
 .ifndef MASTERDIR
-DEPRECATED=	Old version of go--Use a versioned go package (ex. go124) instead
+DEPRECATED=	Old version of Go. Use the go package (lang/go) instead.
 EXPIRATION_DATE=2026-03-01
 
 USE_GITHUB=	yes
