dns/bind9*: move my regen-patches target from Makefile.local

--- a/dns/bind918/Makefile
+++ b/dns/bind918/Makefile
@@ -171,6 +171,13 @@ post-patch:
 		${WRKSRC}/bin/${FILE}
 .endfor
 
+regen-patches:
+	cd ${.CURDIR} ; \
+		make clean ; \
+		mv files/extrapatch-bind-min-override-ttl files/patch-bind-min-override-ttl ; \
+		make extract do-patch makepatch BATCH= NO_IGNORE= PATCH_DEBUG=yes EXTRA_PATCHES= || : ; \
+		mv files/patch-bind-min-override-ttl files/extrapatch-bind-min-override-ttl
+
 post-install:
 	${MKDIR} ${STAGEDIR}${PREFIX}/etc/mtree
 	${MKDIR} ${STAGEDIR}${ETCDIR}
