multimedia/svt-av1: update to 4.0.0
Changes:	https://gitlab.com/AOMediaCodec/SVT-AV1/-/releases/v4.0.0
Reported by:	GitLab (notify releases)

--- a/multimedia/gstreamer1-plugins-svt-av1/Makefile
+++ b/multimedia/gstreamer1-plugins-svt-av1/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	svt-av1
 DISTVERSIONPREFIX=	v
 DISTVERSION=	3.1.0
+PORTREVISION=	1
 CATEGORIES=	multimedia
 PKGNAMEPREFIX=	gstreamer1-plugins-
 
