dns/bind9*: nsupdate works on 15+ with MIT kerberos from base
FreeBSD 15+ have MIT kerberos in the base system, and it fixes the
problems BIND9 was having with Heimdal.

PR:		291776
(cherry picked from commit 07328360c1feb5bc3e3b2e18eb7abd89d226b663)

--- a/dns/bind9-devel/Makefile
+++ b/dns/bind9-devel/Makefile
@@ -4,11 +4,11 @@ PORTNAME=	bind
 DISTVERSION=	9.21.17
 .if defined(BIND_TOOLS_SLAVE)
 # dns/bind-tools here
-PORTREVISION=	0
+PORTREVISION=	1
 .else
 # XXX: correct version
 # dns/bind9xx here
-PORTREVISION=	0
+PORTREVISION=	1
 .endif
 CATEGORIES=	dns net
 MASTER_SITES=	ISC/bind9/${DISTVERSION}
@@ -104,7 +104,7 @@ OPTIONS_EXCLUDE=	DOCS GEOIP LMDB OVERRIDECACHE QUERYTRACE START_LATE \
 OPTIONS_SUB=	yes
 
 DNSTAP_DESC=		Provides fast passive logging of DNS messages
-GSSAPI_BASE_DESC=	Using Heimdal in base (nsupdate is broken)
+GSSAPI_BASE_DESC=	Using ${${OSREL:R} < 15:?Heimdal in base (nsupdate is broken):MIT in base}
 GSSAPI_HEIMDAL_DESC=	Using security/heimdal (nsupdate is broken)
 GSSAPI_MIT_DESC=	Using security/krb5
 GSSAPI_NONE_DESC=	Disable
