dns/bind9*: enable base GSSAPI on 15+
FreeBSD 15+ have MIT kerberos in the base system, and it fixes the
problems BIND9 was having with Heimdal.

PR:		291780
(cherry picked from commit 0732837048ddb9a1650d58080d26b0ab9e1c2e4d)

--- a/dns/bind920/Makefile
+++ b/dns/bind920/Makefile
@@ -4,11 +4,11 @@ PORTNAME=	bind
 DISTVERSION=	9.20.18
 .if defined(BIND_TOOLS_SLAVE)
 # dns/bind-tools here
-PORTREVISION=	1
+PORTREVISION=	2
 .else
 # XXX: correct version
 # dns/bind920 here
-PORTREVISION=	1
+PORTREVISION=	2
 .endif
 CATEGORIES=	dns net
 MASTER_SITES=	ISC/bind9/${DISTVERSION}
@@ -86,8 +86,8 @@ PORTDOCS=	*
 
 OPTIONS_DEFINE=		DNSTAP DOCS FIXED_RRSET GEOIP IDN LARGE_FILE LMDB \
 			OVERRIDECACHE QUERYTRACE START_LATE TCP_FASTOPEN
-OPTIONS_DEFAULT=	DNSTAP GSSAPI_NONE IDN LMDB STATS_JSON STATS_XML \
-			TCP_FASTOPEN
+OPTIONS_DEFAULT=	DNSTAP ${${OSREL:R} < 15:?GSSAPI_NONE:GSSAPI_BASE} IDN \
+			LMDB STATS_JSON STATS_XML TCP_FASTOPEN
 
 OPTIONS_GROUP=		STATS
 OPTIONS_GROUP_STATS=	STATS_JSON STATS_XML
