various: Bump dependent ports for Go 1.25.6
This is a direct commit to 2026Q1.

--- a/sysutils/devtui/Makefile
+++ b/sysutils/devtui/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	devtui
 DISTVERSIONPREFIX=	v
 DISTVERSION=	0.32.5
+PORTREVISION=	1
 CATEGORIES=	sysutils
 
 MAINTAINER=	vidar@karlsen.tech
