--- a/security/certificate_maker/Makefile
+++ b/security/certificate_maker/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	certificate_maker
 DISTVERSIONPREFIX=	v
 DISTVERSION=	1.8.4
+PORTREVISION=	1
 CATEGORIES=	security
 
 MAINTAINER=	bofh@FreeBSD.org
