devel/py-lap: New port
Lap is a linear assignment problem solver using Jonker-Volgenant algorithm.
It's required by the latest version of audio/beet.

PR:		289098

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -5204,6 +5204,7 @@
     SUBDIR += py-klepto
     SUBDIR += py-knack
     SUBDIR += py-l18n
+    SUBDIR += py-lap
     SUBDIR += py-lark
     SUBDIR += py-launchpadlib
     SUBDIR += py-lazr.config
