--- a/japanese/proxy2ch/Makefile
+++ b/japanese/proxy2ch/Makefile
@@ -1,7 +1,8 @@
 PORTNAME=	proxy2ch
 DISTVERSION=	20250614
+PORTREVISION=	1
 CATEGORIES=	japanese www
-MASTER_SITES=	${WWW}archive/
+MASTER_SITES=	https://codeberg.org/NanashiNoGombe/${PORTNAME}/archive/v${DISTVERSION}${EXTRACT_SUFX}?dummy=/
 DISTNAME=	v${DISTVERSION}
 DIST_SUBDIR=	${PORTNAME}
 
