sysutils/rubygem-ohai18: add version 18.2.8
Required for some gems.

(cherry picked from commit 53933ef49a47848942f1677c45d38fc80e6ba757)

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1233,6 +1233,7 @@
     SUBDIR += rubygem-mothra
     SUBDIR += rubygem-murder
     SUBDIR += rubygem-ohai
+    SUBDIR += rubygem-ohai18
     SUBDIR += rubygem-openbolt
     SUBDIR += rubygem-openfact
     SUBDIR += rubygem-openvoxserver-ca
