emulators/rpcs3: update to 0.0.39.18761
Changes:	https://github.com/RPCS3/rpcs3/compare/3e49c32c9c...ebf9374ccd

--- a/emulators/rpcs3/Makefile
+++ b/emulators/rpcs3/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	rpcs3
 DISTVERSIONPREFIX=	v
-DISTVERSION=	0.0.39-18708 # git rev-list --count HEAD
-DISTVERSIONSUFFIX=	-g3e49c32c9c
+DISTVERSION=	0.0.39-18761 # git rev-list --count HEAD
+DISTVERSIONSUFFIX=	-gebf9374ccd
 CATEGORIES=	emulators wayland
 
 MAINTAINER=	jbeich@FreeBSD.org
@@ -13,8 +13,7 @@ LICENSE_COMB=	multi
 LICENSE_FILE_ISCL=	${WRKSRC_cubeb}/LICENSE
 LICENSE_FILE_ZLIB=	${WRKSRC_asmjit}/LICENSE.md
 
-BUILD_DEPENDS=	flatc:devel/flatbuffers \
-		glslang>0:graphics/glslang
+BUILD_DEPENDS=	glslang>0:graphics/glslang
 LIB_DEPENDS=	libzstd.so:archivers/zstd \
 		librtmidi.so:audio/rtmidi \
 		libhidapi.so:comms/hidapi \
@@ -36,6 +35,7 @@ GH_TUPLE=	RPCS3:soundtouch:2.3.1-78-g3982730:soundtouch/3rdparty/SoundTouch/soun
 		kinetiknz:cubeb:cubeb-0.2-1617-ge495bee:cubeb/3rdparty/cubeb/cubeb \
 		Megamouse:VulkanMemoryAllocator:1d8f600:vkalloc/3rdparty/GPUOpen/VulkanMemoryAllocator \
 		nothings:stb:013ac3b:stb/3rdparty/stblib/stb \
+		protocolbuffers:protobuf:edaa823d8b36:protobuf/3rdparty/protobuf/protobuf \
 		wolfSSL:wolfssl:v5.8.0-stable:wolfssl/3rdparty/wolfssl/wolfssl \
 		xioTechnologies:Fusion:v1.2.11:fusion/3rdparty/fusion/fusion
 
@@ -45,7 +45,7 @@ USE_GL=		gl glew
 USE_QT=		base multimedia svg
 USE_XORG=	x11
 CMAKE_ON=	CMAKE_SKIP_RPATH
-CMAKE_ON+=	${GLSLANG FFMPEG FLATBUFFERS HIDAPI LIBPNG LIBUSB MINIUPNPC PUGIXML RTMIDI XXHASH ZSTD:L:S/^/USE_SYSTEM_/}
+CMAKE_ON+=	${GLSLANG FFMPEG HIDAPI LIBPNG LIBUSB MINIUPNPC PUGIXML RTMIDI XXHASH ZSTD:L:S/^/USE_SYSTEM_/}
 CMAKE_ON+=	BUNDLE_SPEEX # only used by cubeb tests
 CMAKE_OFF=	USE_NATIVE_INSTRUCTIONS USE_PRECOMPILED_HEADERS
 CMAKE_ARGS+=	-DLLVM_DIR:PATH="${LLVM_PREFIX}/lib/cmake/llvm"
