--- a/math/py-pygsl/Makefile
+++ b/math/py-pygsl/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	pygsl
 PORTVERSION=	2.6.4
+PORTREVISION=	1
 CATEGORIES=	math python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
