graphics/mesa-devel: update to 26.0.b.736
Changes:	https://gitlab.freedesktop.org/mesa/mesa/-/compare/481df222095...124d550a943

--- a/graphics/mesa-devel/Makefile
+++ b/graphics/mesa-devel/Makefile
@@ -1,7 +1,6 @@
 PORTNAME=	mesa
-DISTVERSION=	26.0-branchpoint-44
-DISTVERSIONSUFFIX=	-g481df222095
-PORTREVISION=	2
+DISTVERSION=	26.0-branchpoint-736
+DISTVERSIONSUFFIX=	-g124d550a943
 CATEGORIES=	graphics
 PKGNAMESUFFIX=	-devel
 
@@ -101,7 +100,7 @@ LLVM_CONFIGURE_ENV=	LLVM_CONFIG=${LLVM_CONFIG}
 LLVM_MESON_ENABLED=	llvm
 LLVM_MESON_TRUE=	amd-use-llvm
 
-LTO_MESON_TRUE=		b_lto
+LTO_MESON_TRUE=		b_lto allow-broken-lto
 
 OPENCL_DESC=		Heterogeneous computing via OpenCL (implies LLVM)
 OPENCL_BUILD_DEPENDS=	bindgen:devel/rust-bindgen-cli \
