textproc/hus-aspell: new port, Aspell dictionary for Huastec

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -297,6 +297,7 @@
     SUBDIR += htmltolatex
     SUBDIR += humanzip
     SUBDIR += hunspell
+    SUBDIR += hus-aspell
     SUBDIR += hy-aspell
     SUBDIR += hyperestraier
     SUBDIR += hyphen
