textproc/mg-aspell: new port, Aspell Malagasy dictionary

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -487,6 +487,7 @@
     SUBDIR += meilisearch
     SUBDIR += meld
     SUBDIR += metauml
+    SUBDIR += mg-aspell
     SUBDIR += mgdiff
     SUBDIR += mi-aspell
     SUBDIR += miller
