--- a/databases/Makefile
+++ b/databases/Makefile
@@ -43,6 +43,7 @@
     SUBDIR += credis
     SUBDIR += cutelyst-asql
     SUBDIR += dalmp
+    SUBDIR += datafusion-cli
     SUBDIR += db
     SUBDIR += db18
     SUBDIR += db5
