devel/py-wait-for-it: Add py-wait-for-it 2.3.0
wait-for-it is a script that will wait on the availability of one or more TCP
services (i.e. host:port) before executing a user-defined command. It is useful
for synchronizing the spin-up of interdependent services, such as linked docker
containers.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -6252,6 +6252,7 @@
     SUBDIR += py-vulture
     SUBDIR += py-wadler-lindig
     SUBDIR += py-wadllib
+    SUBDIR += py-wait-for-it
     SUBDIR += py-wait-for2
     SUBDIR += py-warlock
     SUBDIR += py-watchdog
