sysutils/py-python-on-whales: Add py-python-on-whales 0.80.0
A Docker client for Python, designed to be fun and intuitive!

Works on Linux, macOS and Windows, for Python 3.8 and above.

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1100,6 +1100,7 @@
     SUBDIR += py-python-consul
     SUBDIR += py-python-crontab
     SUBDIR += py-python-nomad
+    SUBDIR += py-python-on-whales
     SUBDIR += py-pytsk
     SUBDIR += py-pywatchman
     SUBDIR += py-pyznap
