textproc/py-hotdoc: Add py-hotdoc 0.17.4
Hotdoc is a documentation micro-framework. It provides an interface for
extensions to plug upon, along with some base objects (formatters, ...).

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1413,6 +1413,7 @@
     SUBDIR += py-hexdump
     SUBDIR += py-hieroglyph
     SUBDIR += py-hjson
+    SUBDIR += py-hotdoc
     SUBDIR += py-html-text
     SUBDIR += py-html2json
     SUBDIR += py-html2text
