www/py-proxy.py: Add py-proxy.py 2.4.10
Proxy.py is a high-performance, lightweight, and highly customizable HTTP proxy
server framework written in Python.

--- a/www/Makefile
+++ b/www/Makefile
@@ -1876,6 +1876,7 @@
     SUBDIR += py-priority
     SUBDIR += py-priority1
     SUBDIR += py-protego
+    SUBDIR += py-proxy.py
     SUBDIR += py-proxy_tools
     SUBDIR += py-puppetboard
     SUBDIR += py-py-restclient
