devel/rubygem-xdg9: Add rubygem-xdg9 9.5.0 (copied from rubygem-xdg)
- Add PORTSCOUT

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -8265,6 +8265,7 @@
     SUBDIR += rubygem-xdg
     SUBDIR += rubygem-xdg7
     SUBDIR += rubygem-xdg8
+    SUBDIR += rubygem-xdg9
     SUBDIR += rubygem-xorcist
     SUBDIR += rubygem-xpath
     SUBDIR += rubygem-xxhash
