--- a/net/gerbera/Makefile
+++ b/net/gerbera/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	gerbera
 DISTVERSIONPREFIX=	v
 DISTVERSION=	3.1.1
+PORTREVISION=	1
 CATEGORIES=	net multimedia
 
 MAINTAINER=	diizzy@FreeBSD.org
