--- a/www/py-django-unfold/Makefile
+++ b/www/py-django-unfold/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	django-unfold
-PORTVERSION=	0.74.1
+PORTVERSION=	0.76.0
 CATEGORIES=	www python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
@@ -8,12 +8,13 @@ DISTNAME=	django_unfold-${PORTVERSION}
 MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Modern Django admin theme for seamless interface development
 WWW=		https://unfoldadmin.com/ \
+		https://unfoldadmin.com/docs/ \
 		https://github.com/unfoldadmin/django-unfold
 
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE.md
 
-BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}poetry-core>=1.0.0:devel/py-poetry-core@${PY_FLAVOR}
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}hatchling>=0:devel/py-hatchling@${PY_FLAVOR}
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}django42>=4.2:www/py-django42@${PY_FLAVOR}
 
 USES=		python
