textproc/py-textual-fastdatatable: Add new port
Textual-fastdatatable is a performance-focused reimplementation of Textual's
DataTable widget, with a pluggable data storage backend.

https://github.com/tconbeer/textual-fastdatatable

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1697,6 +1697,7 @@
     SUBDIR += py-texttable
     SUBDIR += py-textual
     SUBDIR += py-textual-autocomplete
+    SUBDIR += py-textual-fastdatatable
     SUBDIR += py-textual-image
     SUBDIR += py-textual-speedups
     SUBDIR += py-textual0
