databases/py-harlequin-postgres: Add new port
Postgres adapter for Harlequin, the SQL IDE for your Terminal.

https://github.com/tconbeer/harlequin-postgres

--- a/databases/Makefile
+++ b/databases/Makefile
@@ -779,6 +779,7 @@
     SUBDIR += py-geoalchemy2
     SUBDIR += py-harlequin
     SUBDIR += py-harlequin-mysql
+    SUBDIR += py-harlequin-postgres
     SUBDIR += py-hiredis
     SUBDIR += py-influxdb
     SUBDIR += py-kyotocabinet
