comms/xastir:  reset maintainership
- Somehow this got missed 10 years ago :-(

From SRS0+5203f6e19c1a21a6=EU=stagecraft.cx=carl@mx25.net  Tue Apr  7 00:15:53 2015
...
Return-Path: <SRS0+5203f6e19c1a21a6=EU=stagecraft.cx=carl@mx25.net>
	(envelope-from carl@stagecraft.cx)
X-Authentication-Warning: brain.stagecraft.cx: www set sender to carl@stagecraft.cx using -f
To: portmgr@freebsd.org
...
Date: Tue, 07 Apr 2015 14:09:14 +1000
From: Carl <carl@stagecraft.cx>
Cc: Diane Bruce <db@db.net>
Message-ID: <e207d0c19a3a7eec852b568412df4a28@www.stagecraft.cx>
X-Sender: carl@stagecraft.cx
...

Hi,
I'm currently the maintainer (that I know of) of 3 ports;

comms/xastir
comms/hamfax
comms/gmfsk

Could you please reassign the maintainer to "hamradio@freebsd.org".
This will allow a group of us to manage these ports rather than relying
on me.

Thanks!

Carl.

--- a/comms/xastir/Makefile
+++ b/comms/xastir/Makefile
@@ -4,7 +4,7 @@ DISTVERSION=	2.2.0
 PORTREVISION=	9
 CATEGORIES=	comms hamradio
 
-MAINTAINER=	carl@stagecraft.cx
+MAINTAINER=	hamradio@FreeBSD.org
 COMMENT=	X Amateur Station Tracking and Information Reporting
 WWW=		http://www.xastir.org/
 
