sysutils/auto-admin: Update to 0.8.4.14
auto-cups-setup: Tolerate missing drivers (prep for deprecation)
auto-install-base-components: Check for pkgbase
auto-ly-enable: New script to enable ly login manager
auto-pkg-latest:
    Fix missing _${VERSION_MINOR} in kmods repo config
    Offer to overwrite config file when already using latest
auto-update-system: Include /etc/pkg in repo checks
auto-dreckly-setup: Fix pkgsrc wip URL

--- a/sysutils/auto-admin/Makefile
+++ b/sysutils/auto-admin/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	auto-admin
-DISTVERSION=	0.8.4-6
-DISTVERSIONSUFFIX=	-gcaad349
+DISTVERSION=	0.8.4-14
+DISTVERSIONSUFFIX=	-ge80fca5
 CATEGORIES=	sysutils
 
 MAINTAINER=	jwb@FreeBSD.org
