graphics/papers: new port
Papers is a document viewer capable of displaying multiple and single
page document formats like PDF and DejaVu. For more general information
about Papers and how to get started, please visit
https://welcome.gnome.org/app/Papers

PR:		290390

--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -800,6 +800,7 @@
     SUBDIR += pagedgeometry
     SUBDIR += panoglview
     SUBDIR += panomatic
+    SUBDIR += papers
     SUBDIR += partio
     SUBDIR += pastel
     SUBDIR += pcdtojpeg
