sysutils/bareos24-server: Replace BROKEN to IGNORE_i386

--- a/sysutils/bareos24-server/Makefile
+++ b/sysutils/bareos24-server/Makefile
@@ -13,7 +13,7 @@ WWW=		https://www.bareos.org/
 LICENSE=	AGPLv3 LGPL3
 LICENSE_COMB=	multi
 
-BROKEN=		data type bugs, "core/src/stored/backends/chunked_device.cc:685:13: error: comparison of integers of different signs: 'ssize_t' (aka 'int') and 'uint32_t' (aka 'unsigned int')"
+IGNORE_i386=	data type bugs, "core/src/stored/backends/chunked_device.cc:685:13: error: comparison of integers of different signs: 'ssize_t' (aka 'int') and 'uint32_t' (aka 'unsigned int')"
 
 CONFLICTS?=	bareos22-server bareos23-server bareos-server
 
