x11-toolkits/wlroots020: add new port
Same as other wlroots* ports. API breaks every minor update.

Changes:	https://gitlab.freedesktop.org/wlroots/wlroots/-/releases/0.20.0-rc1
Reported by:	GitLab (notify releases)

--- a/x11-toolkits/Makefile
+++ b/x11-toolkits/Makefile
@@ -269,6 +269,7 @@
     SUBDIR += wlroots017
     SUBDIR += wlroots018
     SUBDIR += wlroots019
+    SUBDIR += wlroots020
     SUBDIR += wmapp
     SUBDIR += wxgtk30
     SUBDIR += wxgtk32
