lang/python3{12,13}: limit parallel .pyc compilation to MAKE_JOBS
This option is available since python312[0]. This fixes
python312 and python313 builds with qemu-user-static
emulating riscv64.

[0] https://github.com/python/cpython/commit/9a7e9f9921804f3f90151ca42703e612697dd430

Approved by:		vishwin (#python), lwhsu (mentor)
Signed-off-by:		Siva Mahadevan <siva@FreeBSD.org>
Sponsored by:		The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D54906

--- a/lang/python312/Makefile
+++ b/lang/python312/Makefile
@@ -40,7 +40,8 @@ INSTALL_TARGET=		altinstall					# Don't want cloberring of unprefixed files
 TEST_TARGET=		buildbottest
 TEST_ARGS=		TESTOPTS=-j${MAKE_JOBS_NUMBER}
 
-MAKE_ARGS+=		INSTALL_SHARED="${INSTALL_LIB}"				# Strip shared library
+MAKE_ARGS+=		COMPILEALL_OPTS=-j${MAKE_JOBS_NUMBER} \
+			INSTALL_SHARED="${INSTALL_LIB}"				# Strip shared library
 
 SUB_FILES=		pkg-message
 SUB_LIST=		PYTHON_SUFFIX=${PYTHON_SUFFIX}
