www/tgpt: Update to 2.11.1
Changelog: https://github.com/aandrew-me/tgpt/releases/tag/v2.11.1

PR:		292870
Approved by:	submitter is maintainer

--- a/www/tgpt/Makefile
+++ b/www/tgpt/Makefile
@@ -1,7 +1,6 @@
 PORTNAME=	tgpt
 DISTVERSIONPREFIX=	v
-DISTVERSION=	2.11.0
-PORTREVISION=	6
+DISTVERSION=	2.11.1
 CATEGORIES=	www
 
 MAINTAINER=	nxjoseph@protonmail.com
@@ -13,6 +12,9 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 
 USES=		go:modules
 GO_MODULE=	github.com/aandrew-me/tgpt/v2
+
+post-patch:
+	${CP} ${FILESDIR}/modules.txt ${WRKSRC}/vendor
 
 PLIST_FILES=	bin/tgpt
 
