graphics/gegl: disable relocatable
On discussing with upstream, "relocatable" does not mean ELF
relocation. Currently enabling the feature causes GIMP and other
consumers build and runtime failures.

While here, update comment in x11/babl due to similar architecture.

Reported by: Tatsuki Makino

--- a/graphics/gegl/Makefile
+++ b/graphics/gegl/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	gegl
 DISTVERSION=	0.4.66
+PORTREVISION=	1
 CATEGORIES=	graphics
 MASTER_SITES=	GIMP
 
@@ -33,8 +34,9 @@ MESON_ARGS=	-Ddocs=false \
 		-Dmaxflow=disabled \
 		-Dmrg=disabled \
 		-Dpygobject=disabled \
-		-Dlua=disabled \
-		-Drelocatable=enabled
+		-Dlua=disabled
+# relocatable does not mean ELF relocation
+MESON_ARGS+=	-Drelocatable=disabled
 .if !exists(/usr/include/omp.h)
 MESON_ARGS+=	-Dopenmp=disabled
 .endif
