--- a/x11/babl/Makefile
+++ b/x11/babl/Makefile
@@ -18,7 +18,7 @@ USES=		compiler:c11 gnome meson pathfix pkgconfig tar:xz vala:build
 USE_GNOME=	introspection:build
 USE_LDCONFIG=	yes
 
-# relocatable is currently supported on Linux, Windows and macOS only
+# relocatable does not mean ELF relocation
 MESON_ARGS=	-Dgi-docgen=disabled -Dwith-docs=false -Drelocatable=disabled
 
 BABL_SHLIB=	0.221.1
