devel/py-spin: Add new port
Scientific Python INcantations (spin) is a developer tool
for scientific Python libraries.

https://pypi.python.org/pypi/spin

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -6039,6 +6039,7 @@
     SUBDIR += py-sparse
     SUBDIR += py-speaklater
     SUBDIR += py-speg
+    SUBDIR += py-spin
     SUBDIR += py-spyder-kernels
     SUBDIR += py-sqids
     SUBDIR += py-sqlfluff
