--- a/devel/py-ty/Makefile.crates
+++ b/devel/py-ty/Makefile.crates
@@ -160,7 +160,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		ignore-0.4.25 \
 		imara-diff-0.1.8 \
 		imperative-1.0.7 \
-		indexmap-2.12.1 \
+		indexmap-2.13.0 \
 		indicatif-0.18.3 \
 		indoc-2.0.7 \
 		inotify-0.11.0 \
@@ -179,8 +179,8 @@ CARGO_CRATES=	adler2-2.0.1 \
 		itertools-0.13.0 \
 		itertools-0.14.0 \
 		itoa-1.0.15 \
-		jiff-0.2.17 \
-		jiff-static-0.2.17 \
+		jiff-0.2.18 \
+		jiff-static-0.2.18 \
 		jiff-tzdb-0.1.4 \
 		jiff-tzdb-platform-0.1.3 \
 		jobserver-0.1.34 \
@@ -189,7 +189,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		kqueue-1.1.1 \
 		kqueue-sys-1.0.4 \
 		lazy_static-1.5.0 \
-		libc-0.2.179 \
+		libc-0.2.180 \
 		libcst-1.8.6 \
 		libcst_derive-1.8.6 \
 		libloading-0.8.9 \
@@ -232,7 +232,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		once_cell_polyfill-1.70.1 \
 		oorandom-11.1.5 \
 		option-ext-0.2.0 \
-		ordermap-1.0.0 \
+		ordermap-1.1.0 \
 		os_pipe-1.2.2 \
 		os_str_bytes-7.1.1 \
 		page_size-0.6.0 \
@@ -272,13 +272,13 @@ CARGO_CRATES=	adler2-2.0.1 \
 		prettyplease-0.2.37 \
 		proc-macro-crate-3.4.0 \
 		proc-macro-utils-0.10.0 \
-		proc-macro2-1.0.104 \
+		proc-macro2-1.0.105 \
 		pyproject-toml-0.13.7 \
 		quick-junit-0.5.2 \
 		quick-xml-0.38.4 \
 		quickcheck-1.0.3 \
 		quickcheck_macros-1.1.0 \
-		quote-1.0.42 \
+		quote-1.0.43 \
 		quote-use-0.8.4 \
 		quote-use-macros-0.8.4 \
 		r-efi-5.3.0 \
@@ -298,7 +298,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		regex-1.12.2 \
 		regex-automata-0.4.13 \
 		regex-lite-0.1.7 \
-		regex-syntax-0.8.6 \
+		regex-syntax-0.8.8 \
 		ron-0.12.0 \
 		rust-stemmers-1.2.0 \
 		rustc-hash-2.1.1 \
@@ -316,7 +316,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		serde_core-1.0.228 \
 		serde_derive-1.0.228 \
 		serde_derive_internals-0.29.1 \
-		serde_json-1.0.148 \
+		serde_json-1.0.149 \
 		serde_repr-0.1.20 \
 		serde_spanned-1.0.4 \
 		serde_test-1.0.177 \
@@ -329,7 +329,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		similar-2.7.0 \
 		siphasher-1.0.1 \
 		smallvec-1.15.1 \
-		snapbox-0.6.23 \
+		snapbox-0.6.24 \
 		snapbox-macros-0.4.0 \
 		stable_deref_trait-1.2.0 \
 		static_assertions-1.1.0 \
@@ -339,7 +339,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		strum-0.27.2 \
 		strum_macros-0.27.2 \
 		supports-hyperlinks-3.2.0 \
-		syn-2.0.113 \
+		syn-2.0.114 \
 		synstructure-0.13.2 \
 		tap-1.0.1 \
 		tempfile-3.24.0 \
@@ -363,7 +363,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		tinytemplate-1.2.1 \
 		tinyvec-1.10.0 \
 		tinyvec_macros-0.1.1 \
-		toml-0.9.10+spec-1.1.0 \
+		toml-0.9.11+spec-1.1.0 \
 		toml_datetime-0.7.5+spec-1.1.0 \
 		toml_edit-0.23.6 \
 		toml_parser-1.0.6+spec-1.1.0 \
@@ -394,7 +394,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		unit-prefix-0.5.1 \
 		unscanny-0.1.0 \
 		unty-0.0.4 \
-		url-2.5.7 \
+		url-2.5.8 \
 		urlencoding-2.1.3 \
 		utf8-width-0.1.7 \
 		utf8_iter-1.0.4 \
@@ -476,5 +476,5 @@ CARGO_CRATES=	adler2-2.0.1 \
 		zstd-0.11.2+zstd.1.5.2 \
 		zstd-safe-5.0.2+zstd.1.5.2 \
 		zstd-sys-2.0.16+zstd.1.5.7 \
-		lsp-types@git+https://github.com/astral-sh/lsp-types.git?rev=3512a9f\#3512a9f33eadc5402cfab1b8f7340824c8ca1439 \
-		salsa,salsa-macro-rules,salsa-macros@git+https://github.com/salsa-rs/salsa.git?rev=9860ff6ca0f1f8f3a8d6b832020002790b501254\#9860ff6ca0f1f8f3a8d6b832020002790b501254
+		salsa,salsa-macro-rules,salsa-macros@git+https://github.com/salsa-rs/salsa.git?rev=0946cbd6478cf2bddfc9ac65b3c254c1f1b1bf95\#0946cbd6478cf2bddfc9ac65b3c254c1f1b1bf95 \
+		lsp-types@git+https://github.com/astral-sh/lsp-types.git?rev=3512a9f\#3512a9f33eadc5402cfab1b8f7340824c8ca1439
